# AgentX

./: .gitignore  ARCHITECTURE.md  Dockerfile  HANDOFF_PHASE_1.txt  LESSONS_LEARNED.md  PHASE_1_BRIEFING.md  README.md  SECURITY.md  USAGE_GUIDE.md  audit.py  bench_handoff.py  bench_throughput.py  config.yaml  docker-compose.yml  e2e_orchestrator.py  main.py  pyproject.toml  requirements.txt  test_item2_multitool.py  test_phase1.py  test_phase1_react_multistep.py
.github/workflows/: test.yml
agent/: __init__.py  core.py  ecc_loader.py  factory.py  garbage_collector.py  judge.py  orchestrator.py  prompt_builder.py  react_grammar.gbnf  react_loop.py  session_manager.py  skill_manager.py  skills_compressor.py  state.py  tool_executor.py
api/: routes.py  telegram_gateway.py
api/static/: index.html
data/: memoria.db-shm  memoria.db-wal
data/knowledge/: skills_learnt.bak  skills_learnt.md
llm/: __init__.py  manager.py  pool.py
memory/: __init__.py  cache.py  persistent.py
models/: Modelfile.gemma-3n-e4b  Modelfile.gemma3ne4b  Modelfile.granite-3.1-8b  Modelfile.granite-4-htiny  Modelfile.granite4htiny  Modelfile.phi-4-mini-reasoning  Modelfile.qwen3-4b  Modelfile.qwen35-9b
scripts/: migrate_skills.py
tests/: test_agent_format.py  test_dual_load.py  test_generation_failed_error.py  test_judge.py  test_judge_escalation.py  test_sandbox.py  test_schemas.py  test_security_validator.py  test_skills.py  test_voting.py
tools/: __init__.py  base.py  builtin.py  git_worker.py  process_orchestrator.py  project_manager.py  registry.py  sandbox.py  schemas.py
(+13 files in other folders)
